--- a/flask_app/templates/editFriend.html
+++ b/flask_app/templates/editFriend.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Edit Friend</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Dashboard</a>
+        <a class="navbar-brand" href="#">Edit Friend</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -29,42 +29,50 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/friend/new">Create Friend</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="container mt-3">
+    <div class="container">
+      <h1>Editing a friend</h1>
 
-      <div class="row">
-        <div class="col-8">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Occupation</th>
-                <th scope="col">Age</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for one_friend in all_friends %}
-              <tr>
-                <td><a class="link-primary" href="/friend/{{one_friend.id}}">{{one_friend.first_name}}</a></td>
-                <td>{{one_friend.last_name}}</td>
-                <td>{{one_friend.occupation}}</td>
-                <td>{{one_friend.age}}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+      <form action="/friend/create" class="row" method="post">
+        <div class="col wht-sh">
+          <div>
+            <label for="name">First Name: </label>
+            <input
+              class="form-control mb-3 border border-dark"
+              type="text"
+              id="first_name"
+              name="first_name"
+              placeholder="First Name"
+            />
+          </div>
+          <div>
+            <label for="last_name">Last Name:</label>
+            <textarea
+              id="description"
+              class="form-control mb-3 border border-dark"
+              name="description"
+              cols="42"
+              rows="6"
+              placeholder="Last Name"
+            ></textarea>
+          </div>
+          <label for="occupation">Occupation:</label>
+          <textarea
+            id="occupation"
+            class="form-control border border-dark"
+            name="occupation"
+            cols="42"
+            rows="6"
+            placeholder="Occupation"
+          ></textarea>
         </div>
-        <div class="col-4">
-          <p>Testing</p>
-        </div>
-      </div>
+      </form>
     </div>
 
     <script
