--- a/flask_app/templates/showone.html
+++ b/flask_app/templates/showone.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>One Friend</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Dashboard</a>
+        <a class="navbar-brand" href="/">View Friend</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,37 +36,10 @@
       </div>
     </nav>
 
-    <div class="container mt-3">
-
-      <div class="row">
-        <div class="col-8">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Occupation</th>
-                <th scope="col">Age</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for one_friend in all_friends %}
-              <tr>
-                <td><a class="link-primary" href="/friend/{{one_friend.id}}">{{one_friend.first_name}}</a></td>
-                <td>{{one_friend.last_name}}</td>
-                <td>{{one_friend.occupation}}</td>
-                <td>{{one_friend.age}}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
-        <div class="col-4">
-          <p>Testing</p>
-        </div>
-      </div>
+    <div class="container">
+      <h1>Serving one friend</h1>
+      <p>Hello {{friend.first_name}}</p>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
